UI improvement. Implementing horizontal recyclerView.

--- a/app/src/main/res/menu/drawer_menu.xml
+++ b/app/src/main/res/menu/drawer_menu.xml
@@ -7,7 +7,7 @@
 
         <item
             android:id="@+id/viewEntries"
-            android:icon="@drawable/money"
+            android:icon="@drawable/money_icon"
             android:title="View entries" />
 
         <item
