--- a/app/src/main/res/layout/fragment_suggestions.xml
+++ b/app/src/main/res/layout/fragment_suggestions.xml
@@ -6,10 +6,15 @@
     android:background="@color/white">
 
     <TextView
-        android:layout_width="wrap_content"
+        android:id="@+id/financesTitle"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
         android:layout_marginTop="50dp"
+        android:background="@drawable/background_white"
+        android:elevation="5dp"
+        android:paddingStart="10dp"
+        android:paddingEnd="10dp"
         android:text="@string/finances"
         android:textAllCaps="false"
         android:textColor="@color/blue"
@@ -17,6 +22,19 @@
         android:textStyle="bold"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="50dp"
+        android:layout_marginTop="60dp"
+        android:padding="5dp"
+        android:text="@string/addEntry"
+        android:textAllCaps="false"
+        android:textColor="@color/blue"
+        android:textSize="20sp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/financesTitle" />
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/suggestions"
